# Glitter

./: .gitignore  .gitmodules  CMakeLists.txt
CMake/: assimp.cmake  bullet.cmake  glfw.cmake  test.cmake
Glitter/Models/vox/: chr_sword.ply
Glitter/Shaders/: SurfaceCubemap.frag  SurfaceStandard.frag  SurfaceVertexColor.frag  gamma.frag  pass1.frag  pass1.vert  pass2.frag  pass2ambient.frag  pass2directional.frag  pass2point.frag  pass2point.vert  skybox.frag  skybox.vert  test.frag  test.vert  ubos.vert  vpquad.frag  vpquad.geom  vpquad.vert
Glitter/Shaders/Include/: MatricesExtUbo.glsl  MatricesUbo.glsl  ScalarsUbo.glsl  Utils.glsl  VectorsUbo.glsl
Glitter/Sources/: Array2D.cpp  Array2D.h  Const.cpp  Const.h  DeferredRenderer.cpp  DeferredRenderer.h  Forward.h  Framebuffer.cpp  Framebuffer.h  GameState.cpp  GameState.h  Light.cpp  Light.h  Physics.cpp  Physics.h  Shader.cpp  Shader.h  StateManager.cpp  StateManager.h  TestState.cpp  TestState.h  Utils.cpp  Utils.h  glitter.h  impl.cpp  main.cpp  stdafx.cpp  stdafx.h
Glitter/Sources/Model/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Standard.cpp  Standard.h
Glitter/Sources/Pch/: stdafx.h
Glitter/Sources/Res/: Res.cpp  Res.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Glitter/Sources/Scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  IdPool.cpp  IdPool.h  Scene.cpp  Scene.h  System.cpp  System.h
Glitter/Sources/Test/: Array2DTest.cpp  IdPoolTest.cpp  SceneTest.cpp  SystemTest.cpp
Glitter/Textures/Skybox/: source.txt
